--- a/photoshoot-planner/package.json
+++ b/photoshoot-planner/package.json
@@ -15,6 +15,7 @@
     "react-router": "^7.6.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^9.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
